Fixed long hashes not wrapping in the block window.

--- a/styles/fp.less
+++ b/styles/fp.less
@@ -32,3 +32,7 @@ pre{
 .email-container{
   margin-top: 5px;
 }
+
+.related-to {
+  word-wrap: break-word;
+}
